--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://saksham-chaturvedii.github.io/task-tracker/",
   "browserslist": {
     "production": [
       ">0.2%",
